[package]
name = "poem-simple-http"
version = "0.1.0"
edition = "2024"

[dependencies]
bs58 = "0.5.1"
poem = "3.1.11"
serde = "1.0.219"
serde_json = "1.0.140"
solana-client = "1.14.17"
solana-sdk = "1.18.26"
tokio = { version = "1.45.1", features = ["full"] }


spl-token = "3.5"
spl-associated-token-account = "1.1"
spl-memo = "3"

flate2 = "1.0"
base64 = "0.22.1"
